remove some unnecessary bootstrap styles

--- a/app/app.html
+++ b/app/app.html
@@ -6,7 +6,9 @@
     <script>
       (function() {
         const { app } = require('electron').remote;
-        document.getElementsByTagName('title')[0].innerText = `${app.getName()} (v${app.getVersion()})`;
+        document.getElementsByTagName(
+          'title'
+        )[0].innerText = `${app.getName()} (v${app.getVersion()})`;
         if (!process.env.HOT) {
           const link = document.createElement('link');
           link.rel = 'stylesheet';
@@ -18,7 +20,7 @@
     </script>
   </head>
   <body>
-    <div id="root" class="h-100"></div>
+    <div id="root"></div>
     <script>
       {
         const scripts = [];
